# schedule_event

./: README.md
TelegramBot/: Program.cs  TelegramBot.csproj  events.db
mini_app/: Cargo.toml  index.html  tailwind.config.js
mini_app/src/: main.rs  route.rs
mini_app/src/app/: dashboard.rs
mini_app/src/components/: navbar.rs  theme.rs
mini_app/styles/: input.css  output.css
